--- a/style.css
+++ b/style.css
@@ -1,90 +1,24 @@
-html {
-    font-family: "Montserrat", "sans-serif";
-}
 body {
-    margin: 0;
-    background-color: #efefef;
+  margin: 1vh 1vw;
+  background-color: #efe;
 }
-.description {
-    text-align: center;
+ul,
+fieldset,
+legend {
+  border: 1px solid;
+  border-radius: 5px;
+  background-color: #fff;
 }
-header {
-    background-color: #364552;
-    color: white;
-    padding: 3rem 2rem;
+ul {
+  padding: 0;
+  font-family: monospace;
 }
-header h1 {
-    font-size: 4rem;
-    text-align: center;
+li,
+legend {
+  list-style-type: none;
+  padding: 0.2em 0.5em;
+  background-color: #cfc;
 }
-.container {
-    width: 400px;
-    margin: 0 auto;
-}
-section article {
-    transition: box-shadow 0.3s ease;
-    background-color: #fff;
-    margin: 1rem 0;
-    border-radius: 0.5rem;
-    padding: 0.25rem 0;
-    cursor: pointer;
-    
-}
-section article:hover {
-    box-shadow: 0 0.1rem 0.4rem rgba(0,0,0,0.3);
-}
-section article h2, section article p {
-    margin: 1rem;
-}
-footer {
-    background-color: #222;
-    padding: 3rem;
-    color: white;
-}
-footer section { 
-    float: right;
-}
-footer p {
-    margin: 0;
-}
-footer a {
-    transition: color 0.3s;
-    color: white;
-    text-decoration: none;
-}
-footer a:hover {
-    color: cornflowerblue;
-}
-nav {
-  text-align: center;
-  background-color: #2c3e50;
-  padding: 10px 0;
-}
-nav a {
-  color: white;
-  text-decoration: none;
-  margin: 0 15px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  padding: 10px 0;
-  display: inline-block;
-  position: relative;
-}
-
-/* Línea animada al pasar el mouse */
-nav a::after {
-  content: '';
-  position: absolute;
-  width: 0%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: white;
-  transition: width 0.3s ease;
-}
-
-/* Animación al pasar el mouse */
-nav a:hover::after {
-  width: 100%;
+li:nth-of-type(even) {
+  background-color: inherit;
 }
